kustomize/overlays/scots-lab/apps/romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: romm
  labels:
    app: romm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      enableServiceLinks: false
      priorityClassName: homelab-data
      containers:
        - name: romm
          image: rommapp/romm:4.8.1
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: library
              mountPath: /romm/library
            - name: resources
              mountPath: /romm/resources
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi

        - name: mariadb
          image: mariadb:11-jammy
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi


      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: romm-library
        - name: resources
          persistentVolumeClaim:
            claimName: romm-resources
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: romm-mariadb-data
