kustomize/overlays/scots-lab/apps/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm-svc
  namespace: romm
spec:
  selector:
    app: romm
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
